[package]
name = "c-sharp-tree-sitter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
tree-sitter-highlight = "0.20.1"
tree-sitter-c-sharp = "0.20.0"

[build-dependencies]
minreq = "2.8.1"
csbindgen = "1.7.3"
bindgen = "0.65.1"
cc = "1.0.79"

[features]
default = ["minreq/native-tls"]